# lakeflow-mcp

./: README.md  ci_test.py  lakeflow.py  pyproject.toml  run_lakeflow_demo.py
.cursor/rules/: style-guide.mdc
.github/workflows/: ci.yml
lakeflow_demo/: pyproject.toml
lakeflow_demo/src/: task.py
