[project]
name = "lakeflow-demo"
version = "0.1.0"
description = "Lakeflow Demo Task"
requires-python = ">=3.9"
dependencies = [
    "numpy",
]

[project.scripts]
lakeflow-task = "lakeflow_demo.task:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.wheel.sources]
"src" = "lakeflow_demo"
